src/App.css
* {
  background-color: #f5f7fb;
  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
}

body {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  text-align: center;
  overflow: hidden;
  position: relative;
  background-color: #f5f7fb;
}

body::before,
body::after {
  content: "";
  position: absolute;
  border-radius: 50% 40% 40% 30% / 30% 30% 40% 50%;
  z-index: 0;
}
body::before {
  width: 25vw;
  height: 25vw;
  max-width: 300px;
  max-height: 300px;
  top: -10vw;
  right: -10vw;
  background-color: #fffad1;
}

body::after {
  width: 25vw;
  height: 25vw;
  max-width: 300px;
  max-height: 300px;
  bottom: -10vw;
  left: -10vw;
  border-radius: 50% 40% 40% 30% / 50% 60% 50% 50%;
  background-color: #deebf8;
}

.start-quiz-button {
  background-color: #4d5b9e;
  width: 100%;
  color: white;
  border: none;
  border-radius: 6px;
  padding: 15px 0;
}

.description,
.title {
  color: #293264;
}

.description {
  margin: 20px 0;
}

.title {
  font-weight: 700;
}

.questions-container {
  width: 80vw;
  height: 14vh;
  display: flex;
  flex-direction: column;
  border-bottom: 2px solid #dbdef0;
}

.check-answers-button {
  background-color: #4d5b9e;
  border: none;
  margin-top: 20px;
  color: white;
  padding: 15px 20px;
  border-radius: 20px;
}

.answers-container {
  display: flex;
  gap: 20px;
}

.question {
  text-align: left;
}

.answer {
  margin: 0;
}

.answer-button {
  border: 1px solid #333;
  background: white;
  padding: 8px 16px;
  border-radius: 8px;
  margin: 4px;
  cursor: pointer;
}

.answer-button.selected {
  background: #cfd8ff;
}

.answer-button.correct {
  background: #90ee90;
}

.answer-button.wrong {
  background: #ff7f7f;
}

.check-answers-button,
.play-again-btn {
  margin-top: 16px;
  padding: 10px 20px;
  border-radius: 8px;
  border: none;
  cursor: pointer;
}

.check-answers-button:disabled {
  background: #ccc;
  cursor: not-allowed;
}

.play-again-btn {
  background-color: #4d5b9e;
  color: white;
  padding: 8px 15px;
  border-radius: 10px;
  border: none;
  cursor: pointer;
  margin: 0;
}

.quiz-results-footer{
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 10px;
}

.score-display-el{
  font-weight: 700;
}

